fix: [lw-12560] align banxa banner with latest figma

--- a/apps/browser-extension-wallet/src/views/browser-view/components/TopUpWallet/TopUpWallet.module.scss
+++ b/apps/browser-extension-wallet/src/views/browser-view/components/TopUpWallet/TopUpWallet.module.scss
@@ -8,11 +8,12 @@
   align-self: start;
   border-radius: size_unit(2);
   background: var(--primary-gradient);
-  display: flex;  
-  align-items: center; 
-  justify-content: center;   
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0 size_unit(1);
   height: 20px;
+  margin-bottom: 10px;
 }
 .badgeCaption {
   color: var(--color-white, #fff) !important;
@@ -24,10 +25,6 @@
   height: 127px;
   padding: 0 4px;
   color: var(--light-mode-dark-grey, var(--dark-mode-light-grey, #6f7786));
-}
-
-.disclaimerShort {
-  color: var(--light-mode-mid-grey, var(--dark-mode-light-grey, #c0c0c0)) !important;
 }
 
 .disclaimerFullWrapper {
